--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Babylon Starter</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
     <div id="viewport">
@@ -14,6 +14,6 @@
         </div>
       </div>
     </div>
-    <script type="module" src="./src/main.ts"></script>
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
