--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Babylon Starter</title>
+    <title>Holographic Driver Training APP</title>
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <!--<link rel="stylesheet" href="./style.css" />-->
   </head>
